v2.1a1
- remove simpleNDB
- add google supported NDB
- update Angular to v13 and all packages
- update Fire to latest version
- change Map Api to a paged API
- add bounding box to map search
- add clustering
